# hhu-oms

./: .devenv.flake.nix  .dockerignore  .gitignore  .~lock.Tempered Mock Portfolios.xlsx#  Dockerfile  Tempered Mock Portfolios.xlsx  alembic.ini  app.py  docker-compose.yml  models.py  portfolio.db  pyproject.toml  requirements.txt
.devenv/: flake.json  load-exports  profile  run
.devenv/gc/: shell-1-link
alembic/: env.py
alembic/versions/: 12233b639a36_add_currency_to_transactions.py  4331b17c5cf2_add_datatype_col_to_holdings.py  43c9ee2f7580_initial_schema.py  7acf5ed610d8_add_datatype_col_to_holdings.py  924c708e4f5f_add_transactions_table.py  a019ba63617d_add_transactions_table.py
pages/: add_to_all.py  buysell.py  edit_holdings.py  excel_import.py  portfolio_manager.py  transactions.py
