[project]
name = "nix-python-devenv"
version = "0.1.0"
description = "Example project with working C bindings!"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "black>=25.1.0",
    "currencyconverter>=0.18.5",
    "faiss-cpu>=1.10.0",
    "html2text>=2024.2.26",
    "isort>=6.0.0",
    "langchain-community>=0.3.17",
    "langchain>=0.0.27",
    "numpy>=1.21.0",
    "openai>=1.61.1",
    "openpyxl>=3.1.5",
    "plotly>=6.0.0",
    "psycopg2>=2.9.10",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "requests-cache>=1.2.1",
    "sec-api>=1.0.27",
    "sentence-transformers>=3.4.1",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.0",
    "tiktoken>=0.8.0",
    "yfinance>=0.2.55",
]
